luca-website/src/App.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Roboto:100,300,400,500,700,900&display=swap');

body{
  padding: 0;
  margin:0;
}
.App{
  width: 100vw;
  height: 100vh;
  margin: auto;
  position: relative;
  /* overflow: hidden; */
}

/* .HomeforPhone {
  height: 100vh;
  width: 100vw;
  background-color: red;
} */


.Navbar {
  position: fixed;
  /* background-color: red; */
  height: 14vh;
  width: 100vw;
}


.Homesection {
  height: 100vh;
  width: 100vw;
}

.HomeforPhone-container {
  display: none;
}

.hero-image-container {
  display: none;
}

/* // hiw section */
.HIWsection {
  height: 90vh;
  width: 100vw;
  background-color: #F8F8F8;
}

.hiw-title-box {
  /* margin-left: 30px; */
  font-size: 50px;
  /* text-align: left; */
  /* background-color: green; */
  height: 14rem;
  width: 100%;
  font-family: 'Open sans', sans-serif;
  font-weight: 700;
  line-height: 68px;
  color: #203060;
  display: flex;
  justify-content: center;
  align-items: center;
  
}

.icon-container {
  height: 100%;
  width: 100%;
  /* background-color: blue; */
  display: flex;
  justify-content: center;
  align-items: flex-start;
  /* justify-content: space-evenly; */

}

.hiw-icon {
  height: 52vh;
}

/* pricing section */

.Pricingsection {
  height: 100vh;
  width: 100vw;

  /* background-color: red; */
}

.pricing-image-box {
    background-color: #203060;
    height: 42vh;
    width: 100vw;
    display: flex;
    justify-content: center;
}

.pricing-icon {
  height: 60vh;
  margin-top: 110px;
}

.bottom-pricing-box {
  height: 50%;  
  width: 100%;
  /* background-color: red; */
}

.pricing-dotted-image {
  margin-top: 10%;
  width: 35%;
  margin-left: 1%;
}
.PIsection {
  height: 100vh;
  width: 100vw;
}

.Savetimesection {
  height: 75vh;
  width: 100vw;
  /* margin-top: -5rem; */
 /* background-color: red;  */
}
.Invoicesection {
  /* margin-top: -5rem; */
  height: 80vh;
  width: 100vw;
  /* background-color: red; */
}
.Remindersection {
  height: 80vh;
  width: 100vw;
}
.Magicsection {
  height: 80vh;
  width: 100vw;
}
.Slidersection {
  height: 20vh;
  width: 100vw;
}

.Footersection {
  height: 120vh;
  width: 100vw;
  /* background-color: blue; */
  /* position: fixed; */
}

.footer-container {
  height: 100%;
  width: 100%;
  /* background-color: green; */
}

.footer-topbox {
  height: 40%;
  width: 100%;
  background-color: #203060;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-details-container {
  height: 100%;
  width: 66rem;
  margin-top: 16rem;
  background-color: white;
  box-shadow: -8px -8px 29px rgba(194, 207, 241, 0.109488), 6px 6px 29px rgba(194, 207, 241, 0.220533);
}

.footer-details-notes {
  height: 130px;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  color: #203060;
  margin-top: 2.3rem;
  /* background-color: blue; */
}

.footer-email-form {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  margin-top: 2.5rem;
  margin-right: 30px;
  font-family: 'Open sans', sans-serif;
  /* background-color: red; */
}

#footer-email {
  width: 20rem;
  height: 2.5rem;
  border-radius: 5px;
  padding: 0.25rem;
  padding-left: 20px;
  background: transparent;
  border-top: 1.5px solid !important;
  border-left: 1.5px solid !important;
  border-right: transparent !important;
  border-bottom: 1.5px solid !important;
  /* border: 1.5px solid !important; */
  font-weight: 200;
  color: #50E3C2;
  box-shadow: none;
  text-decoration: none;
  font-size: 0.8rem;
  font-family: 'Open sans', sans-serif;
    /* border-bottom: solid black 5px; */
}

.footer-button-container {
  height: 3.2rem;
  width: 142px;
  background-color: #50E3C2;
  color: #203060;
  display: flex;
  justify-content: flex-start;
  margin-left: -10px;
  margin-top: 2rem;
  border-radius: 0px 5px 5px 0px; 
  text-align: center;
  box-shadow: none;
  border: solid #50E3C2 1px;
}

#footer-button {
  
  padding-left: 21px;
  font-size: 16px;
  font-weight: bold;
  box-shadow: none;
  font-family: 'Open sans', sans-serif;
  /* border: solid #50E3C2; */
   /* text-align: center;
         color: green; */
}




.footer-lowerbox {
  height: 57%;
  width: 100%;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* back to top box */

.back-to-top {
  margin-top: 6rem;
  height: 30%;
  width: 100%;
  /* background-color: purple; */
  display: flex;
  justify-content: center;
  align-items: center;
}

.chevron-up {
  margin-bottom: 6rem;
  color: #50E6C5;
}

/* footer navbox  */

.footer-middlebox {
  height: 10%;
  width: 100%;
  /* background-color: green; */
}
 
.footer-navbox {
  height: 30%;
  width: 100%;
  margin-left: -16px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-navitem {
  display: inline-block;
  list-style-type: none;
  margin: 0;
  margin-top: 0.8rem;
  /* padding: 10px 0 25px; */
  margin-right: 2rem;
   /* background-color: red; */
}

.details-luca-logo {
  /* background-color: red; */
  height: 2.5rem;
  margin-bottom: 0.3rem;
}

.hiw-luca-logo {
  margin-left: 1rem;
  margin-right: 0.3rem;
}

.middlebox {
  height: 40%;
  width: 100%;
  background-color: white;
}

#footer-button {
  margin-top: 1rem;
}


#footer-button:hover {
   
    color: white;
  
}
/* social media box */

.footer-social-media-container {
  height: 60%;
  width: 100%;
  /* background-color: purple; */
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.footer-sm-box {

  height: 100%;
  width: 100%;
}

.twitter {
  margin-right: 1rem;

}

.insta {
  margin-right: 1rem;
}

.second-last-copyright-box {
  /* background-color: red; */
  display: flex;
  align-items: flex-end;
  justify-content: center;
}

.copyright-font {
  font-size: 0.7rem;
}


.footer-lowestbox {
  height: 3%;
  width: 100%;
  background-color: #203060;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Roboto', sans-serif;
  font-weight: regular;
}

.most-bottom-font {
  font-size: 11px;
  color:  #6D7797;
}


.footer-logo-box {
  display: flex;
  flex-direction: row;
  /* background-color: yellow; */
  margin-left: 90px;
  margin-right: 90px;
}

.footer-luca-logo {
  height: 2.2rem;
  margin-left: -4rem;
  /* margin-right: 2.5rem;
  margin-left: -1rem; */
  /* background-color: yellow; */
}
/* .App {
  text-align: center;
} */
/* 
.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
} */


/* 
@media only screen and (max-width: 500px) {
  .Navbar {
    display: none;
  }

  .logo-box {
    display: none;
  }
} */


@media only screen and (max-width: 500px) {

  body
  {
    margin: 0;
    padding: 0;
    
    /* make it look decent enough */
    background: #232323;
    /* color: #cdcdcd;
    font-family: "Avenir Next", "Avenir", sans-serif; */
  }

    .Navbar {
      display: none;
    }

    .Homesection {
      display: none;
    }
 
    .HomeforPhone-container {
      display: block;
      height: 80%;
      width: 100%;
      background-color: red;
    }

    .hamburgermenu-container {
      height: 10%;
      display: flex;
      justify-content: flex-end;
      background-color: green;
      width: 100%;
    }

    .hamburgermenu {
      height: 3rem;
      background-color: blue;
      width: 3rem;
      margin-top: 1.5rem;
    }

    .Lucaforphone-logocontainer {
      height: 15%;
      background-color: pink;
      width: 100%;
      display: flex;
      justify-content: center;
    
    }

    .luca-logo-phone {
      height: 4rem;
    }

    .luca-home-title-container {
      height: 60%;
      background-color: orange;
      width: 100%;
      /* display: flex;
      justify-content: center;
      align-items: center; */
    }

    .luca-section-title {
      font-family: Open Sans;
      font-style: normal;
      font-weight: bold;
      font-size: 1.3rem;
      line-height: 1.5rem;
      text-align: center;
      padding: 0rem 0.1rem 0rem 0.1rem;
      color: #203060;
      
    }

    .phone-form-inline {
      
        margin-top: -0.2rem;
    }

    .phone-home-button {
      height: 3rem;
      width: 13rem;
      background-color: #50E3C2;
      color: #203060;
      font-family: Open Sans;
      font-style: normal;
      font-weight: 600;
      /* display: flex;
      justify-content: center; */
      /* margin-left: 1.5rem; */
      margin-top: 1rem;
      border-radius: 0.3rem; 
      /* text-align: center; */
      box-shadow: none;
      border: solid #50E3C2 1px;
    }
    
    .getstarted-phone {
      color: #203060;
      text-decoration: none;
    }

    #get-phone {
      font-size: 1rem;
      margin-bottom: 2rem;
    }

    #phone-emaill {
      width: 15rem;
      padding-bottom: 0.2rem;
      background: transparent;
      
      border-top: transparent !important;
      border-left: transparent !important;
      border-right: transparent !important;
      border-bottom: 0.1rem solid !important;
      font-weight: 300;
      color: #50E3C2;
      padding-left: 0;
      box-shadow: none;
      text-decoration: none;
      letter-spacing: 2px;
      font-size: 0.9rem;
      
    }
    /* .luca-home-notes-container {
      height: 30rem;
      background-color: olivedrab;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
    } */

    .luca-home-notes {
      font-family: Open Sans;
      font-style: normal;
      font-weight: normal;
      font-size: 1rem;
      line-height: 160%;
      text-align: center;
      padding: 0rem 0.5rem 0rem 0.5rem;
      color: rgba(35, 44, 68, 0.78);
      
    }

    .MYOBbutton-phone {
      height: 10%;
      width: 100%;
      background-color: #203060;
      
    }

    .MYOBbutton-image-phone {
      height: 100%;
      width: 83rem;
    }

    .Xerobutton-phone {
      height: 10%;
      width: 100%;
      background-color: #206025;
    }

    .XERObutton-image-phone {
      height: 100%;
      width: 83rem;
    }

    .hero-image-container {
      display: block;
      height: 180vh;
      width: 396vw;
      background-color: purple;
      display: flex;
      justify-content: flex-end;
      
    }

    .hero-image-phone {
      height: 90%;
      width: 90%;
    }

}

